<resources>
    <string name="app_name">HealthRaceApp</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="male_radio_button">Male</string>
    <string name="female_radio_button">Female</string>
    <string name="pick_date">Set</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="title_activity_fruit">Fruit Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_group_activity">Group Page</string>
    <string name="title_activity_step_counter">Step Counter Activity</string>
    <string name="title_activity_group">Groups</string>
    <string name="title_activity_vegetable">Vegetable Activity</string>
    <string name="title_activity_water">Water Activity</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="username">Username</string>
    <string name="DoB">DoB:</string>
    <string name="gender">Gender</string>
    <string name="email_profile">Email</string>
    <string name="card_view_username">Username:</string>
    <string name="card_view_email">Email:</string>
    <string name="card_view_score">Score:</string>
    <string name="card_view_filler_email">email@example.com</string>
    <string name="card_view_filler_username">ExampleUsername</string>
    <string name="card_view_filler_score">0</string>
    <string name="create_new_group_button">Create New Group</string>
    <string name="create_group">You are not a part of any group. You can either create your own group by going to the overflow menu in the action bar (the three dots). Or you can get added to a group.</string>
    <string name="select_group">Select Group</string>
    <string name="add_user_to_group">Add User To Group</string>
    <string name="remove_user_from_group">Remove User From Group</string>
    <string name="delete_group">Delete Selected Group</string>
    <string name="change_group_name">Change Group Name</string>
    <string name="profile">profile</string>
    <string name="nr_ppl_in_group">Number of members in selected group:</string>
    <string name="default_ppl_in_group">1</string>
    <string name="action_search">Action Search</string>
</resources>