<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/nav_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="0dp"-->
    <!--        android:layout_marginEnd="0dp"-->
    <!--        android:background="?android:attr/windowBackground"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_menu" />-->

    <!--    <fragment-->
    <!--        android:id="@+id/nav_host_fragment"-->
    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_marginTop="104dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:layout_marginRight="16dp"-->
    <!--        app:defaultNavHost="true"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/nav_view"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="1.0"-->
    <!--        app:navGraph="@navigation/mobile_navigation" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="383dp"
        android:layout_height="215dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="330dp"
            android:layout_height="53dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="163dp"
            android:layout_height="48dp"
            android:hint="Age"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.886"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="331dp"
            android:layout_height="51dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="359dp"
        android:layout_height="41dp"
        android:layout_marginTop="124dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="359dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:text="Register"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>